syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "VisionType.proto";

// CmdId: 285
// EnetChannelId: 0
// EnetIsReliable: true
message SceneEntityDisappearNotify {
	repeated uint32 entity_list = 9;
	VisionType disappear_type = 10;
	uint32 param = 6;
}
